--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="svg-container">
-  <app-donut-chart-svg [data]="chartData"></app-donut-chart-svg>
+  <app-donut-chart-svg [data]="chartData" [total]="total"></app-donut-chart-svg>
 </div>
