--- a/src/app/donut-chart-svg/donut-chart-svg.component.html
+++ b/src/app/donut-chart-svg/donut-chart-svg.component.html
@@ -1,5 +1,15 @@
 <svg viewBox="0 0 200 200" class="donut-chart">
-  <circle cx="100" cy="100" r="70" fill="none" stroke="#f0f0f0" stroke-width="30"></circle>
+  <style>
+    .text-style {
+      font-family: Mark Offc For MC,serif;
+      font-size: 6px;
+      font-weight: 700;
+      line-height: 22px;
+      text-align: center;
+    }
+  </style>
+
+  <circle cx="100" cy="100" r="70" fill="none" stroke="#f0f0f0" stroke-width="35"></circle>
   <circle
     *ngFor="let item of data; let i = index"
     cx="100"
@@ -8,16 +18,22 @@
     [attr.stroke]="item.color"
     [attr.stroke-dasharray]="getSegmentStyle(i, item).strokeDasharray"
     [attr.stroke-dashoffset]="-getSegmentStyle(i, item).strokeDashoffset"
-    stroke-width="30"
+    stroke-width="35"
     fill="none"
   ></circle>
-  <text x="100" y="90" text-anchor="middle" alignment-baseline="middle" font-size="20">
-    {{ total }} kg CO₂
+  <text x="100" y="90" text-anchor="middle" alignment-baseline="middle" class="text-style">
+    <tspan x="100" dy="0">Nie możemy obliczyć</tspan>
+    <tspan x="100" dy="8">przybliżonego śladu</tspan>
+    <tspan x="100" dy="8">węglowego ze względu na brak</tspan>
+    <tspan x="100" dy="8">dotychczasowych transakcji</tspan>
   </text>
-  <text x="100" y="110" text-anchor="middle" alignment-baseline="middle" font-size="10">
-    Приблизительный углеродный след
-  </text>
-  <g *ngFor="let item of data; let i = index" [attr.transform]="getLabelTransform(i)">
-    <image [attr.href]="item.icon" width="20" height="20"></image>
+  <g *ngFor="let item of data; let i = index">
+    <image
+      *ngIf="isSegmentLargeEnough(i)"
+      [attr.href]="item.icon"
+      width="24"
+      height="24"
+      [attr.transform]="getLabelTransform(i)"
+    ></image>
   </g>
 </svg>
