aligning icons middle of arc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <div class="svg-container">
-  <app-donut-chart-svg [data]="chartData" [total]="total"></app-donut-chart-svg>
+  <app-donut-chart-svg [data]="defaultData"></app-donut-chart-svg>
+</div>
+<div class="svg-container">
+  <app-donut-chart-svg [data]="chartData"></app-donut-chart-svg>
+</div>
+<div class="svg-container">
+  <app-donut-chart-svg [data]="anotherOneData"></app-donut-chart-svg>
 </div>
